Cast out the default cron installation
Comment out adding crontab entries from the install script.

--- a/install
+++ b/install
@@ -35,12 +35,12 @@ function run() {
     echo "inventory_git_url=$INVENTORY_GIT_URL" >> $CONFIG_FILE
   fi
 
-  echo Adding entry to /etc/crontab...
-  echo "$(cat /etc/crontab | grep -v $AV_PATH)" > /etc/crontab
-  echo "* * * * * root $AV_PATH directive >> /var/log/aviary-directive.log 2>&1" >> /etc/crontab
-  echo "$(( RANDOM % 60 )) * * * * root $AV_PATH apply >> /var/log/aviary.log 2>&1" >> /etc/crontab
+  # echo Adding entry to /etc/crontab...
+  # echo "$(cat /etc/crontab | grep -v $AV_PATH)" > /etc/crontab
+  # echo "* * * * * root $AV_PATH directive >> /var/log/aviary-directive.log 2>&1" >> /etc/crontab
+  # echo "$(( RANDOM % 60 )) * * * * root $AV_PATH apply >> /var/log/aviary.log 2>&1" >> /etc/crontab
 
-  echo Done
+  # echo Done
 }
 
 run  # Wrap in function to ensure entire script is downloaded.
